# cinesub-studio

./: .gitattributes  .gitignore  AGENTS.md  README.md  TRIAL.md  analyze_subtitles.ps1  batch_worker.py  download_model_file.py  e2e_runner.py  install.ps1  language_profile_store.py  provider_store.py  pyproject.toml  quality_checker.py  requirements.txt  run_transcribe.ps1  start_app.py  start_web.ps1  subtitle_translate.py  transcribe.py  web_server.py
.superdesign/: design-system.md
acceptance/: m10_queue_history_progress_recovery_ui.md  m11_runtime_model_ffmpeg_management_ui.md  m12_provider_profile_settings_center.md  m13_local_launcher_readiness.md  m14_windows_portable_release_readiness.md  m5_5_e2e_feasibility.md  m6_0_delivery_readiness.md  m6_10_local_storage_hygiene.md  m6_1_maintainability_release_hygiene.md  m6_2_portable_runtime_readiness.md  m6_4_release_slimming.md  m6_5_portable_runtime_smoke.md  m6_6_portable_python_runtime_prep.md  m6_7_release_candidate_packaging.md  m6_8_release_candidate_audit_notes.md  m6_9_external_trial_checklist_release_notes_freeze.md  m7_0_mixed_language_asr_evidence.md  m7_0_real_wav_evidence_run.md  m7_2_segment_asr_routing_heuristics.md  m7_3_segment_asr_routing_sandbox_summary.md  m7_4_segment_asr_routing_sandbox_replay.md  m7_5_segment_asr_routing_policy_dry_run.md  m8_1_segment_asr_routing_integration.md  m8_2_segment_asr_routing_apply.md  m8_3_full_routed_segment_payload.md  m8_4_segment_asr_apply_smoke_and_guards.md  m8_5_segment_asr_apply_smoke_ux.md  m8_6_segment_asr_apply_real_smoke.md  m8_closeout.md  (+25 more)
(+283 files in other folders)
